examples/mood/tests/fixtures/expression_path_from_function.mood.expected
Error: Expected enum, got function:
 --> expression_path_from_function.mood:6:5

  | pub fn test(): f64 {
6 |     func::Bar
  |     ^^^^ Expected an enum.
  | }
